[package]
name = "raft"
version = "0.7.0"
authors = ["The TiKV Project Developers"]
license = "Apache-2.0"
keywords = ["raft", "distributed-systems", "ha"]
repository = "https://github.com/tikv/raft-rs"
readme = "README.md"
homepage = "https://github.com/tikv/raft-rs"
documentation = "https://docs.rs/raft"
description = "The rust language implementation of Raft algorithm."
categories = ["algorithms", "database-implementations", "no-std"]
edition = "2021"

[workspace]
members = ["proto", "harness", "datadriven"]

[features]
default = ["protobuf-codec", "default-logger", "std"]
std = ["thiserror", "fxhash", "raft-proto/std"]
# Enable failpoints
failpoints = ["fail/failpoints"]
protobuf-codec = ["raft-proto/protobuf-codec", "raft-proto/std", "bytes", "protobuf"]
prost-codec = ["raft-proto/prost-codec", "prost"]
default-logger = ["slog-stdlog", "slog-envlogger", "slog-term"]

# Make sure to synchronize updates with Harness.
[dependencies]
bytes = { version = "1", optional = true, default-features = false }
fxhash = { version = "0.2.1", optional = true }
ahash = { version = "0.8.3", default-features = false }
fail = { version = "0.4", optional = true }
getset = "0.1.1"
protobuf = { version = "2", optional = true }
prost = { version = "0.12.4", optional = true, default-features = false, features = ["prost-derive"] }
thiserror = { version = "1.0", optional = true }
raft-proto = { path = "proto", version = "0.7.0", default-features = false }
rand = { version = "0.8", default-features = false, features = ["alloc", "small_rng", "getrandom"] }
getrandom = { version = "0.2.10", default-features = false, features = ["rdrand"] }
slog = { version = "2.2", default-features = false }
slog-envlogger = { version = "2.1.0", optional = true }
slog-stdlog = { version = "4", optional = true }
slog-term = { version = "2.4.0", optional = true }
spin = { version = "0.9.8"}
hashbrown = { version = "0.14.0"}

[dev-dependencies]
criterion = "0.3"
regex = "1"
slog-async = "2.3.0"
slog-envlogger = "2.1.0"
slog-stdlog = "4"
slog-term = "2.4.0"
anyhow = "1.0.40"
datadriven = { path = "datadriven", version = "0.1.0" }
itertools = "0.10.0"

[[bench]]
name = "benches"
harness = false

[badges]
travis-ci = { repository = "tikv/raft-rs" }

[[example]]
name = "single_mem_node"
path = "examples/single_mem_node/main.rs"

[[example]]
name = "five_mem_node"
path = "examples/five_mem_node/main.rs"
