[package]
name = "raft-proto"
version = "0.7.0"
authors = ["The TiKV Project Developers"]
edition = "2021"
license = "Apache-2.0"
keywords = ["raft", "distributed-systems", "ha"]
repository = "https://github.com/pingcap/raft-rs"
homepage = "https://github.com/pingcap/raft-rs"
documentation = "https://docs.rs/raft-proto"
description = "Protocol definitions for the rust language implementation of the Raft algorithm."
categories = ["algorithms", "database-implementations"]
build = "build.rs"

[features]
default = ["protobuf-codec", "std"]
std = []
protobuf-codec = ["protobuf-build/protobuf-codec", "bytes", "protobuf/bytes", "protobuf"]
prost-codec = ["protobuf-build/prost-codec", "prost", "lazy_static"]

[build-dependencies]
protobuf-build = { version = "0.15.1", default-features = false }

[dependencies]
bytes = { version = "1", optional = true, default-features = false }
lazy_static = { version = "1", optional = true, default-features = false, features = ["spin_no_std"] }
prost = { version = "0.11", optional = true, default-features = false, features = ["prost-derive"] }
protobuf = { version = "2", optional = true }
